--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dav-js": "git+https://github.com/dav-apps/dav-js.git#v2.0.1",
     "express": "^4.17.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/express": "4.11.1",
     "@types/node": "^14.14.34",
-    "@types/express": "4.11.1"
+    "dotenv": "^8.2.0"
   }
 }
