--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "dav-login",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/server.js"
   },
   "author": "",
   "license": "ISC",
